# LearnTDD

./: README.md  pyproject.toml
superlists/: functional_tests.py  settings.py
